--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
-        "C:/javafx-sdk-24.0.1/lib/*.jar"
+        "C:/javafx-sdk-24.0.1/lib/*.jar",
+        "c:\\Sql Java\\postgresql-42.7.6.jar"
     ],
     "jdk.runConfig.vmOptions": "--module-path \"C:\\javafx-sdk-24.0.1\\lib\" --add-modules javafx.controls,javafx.fxml",
     "java.project.sourcePaths": [
