--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,18 @@
 {
     "java.project.referencedLibraries": [
-        "C:/javafx-sdk-24.0.1/lib/*.jar",
-        "c:\\Sql Java\\postgresql-42.7.6.jar"
+        "C:\\javafx-sdk-24.0.1\\lib\\*.jar",
+        "c:\\Sql Java\\postgresql-42.7.6.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx.base.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx.controls.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx.fxml.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx.graphics.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx.media.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx.swing.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx.web.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\javafx-swt.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\jdk.jsobject.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\jfx.incubator.input.jar",
+        "c:\\javafx-sdk-24.0.1\\lib\\jfx.incubator.richtext.jar"
     ],
     "jdk.runConfig.vmOptions": "--module-path \"C:\\javafx-sdk-24.0.1\\lib\" --add-modules javafx.controls,javafx.fxml",
     "java.project.sourcePaths": [
